backend/vulnerability_analysis/testing/iof1/segments/klee-out-1/test000001.exec.err
Error: external call with symbolic argument: __ubsan_handle_sub_overflow
File: testing/int_overflow3/segments/segment_2_klee.c
Line: 10
assembly.ll line: 7818
State: 3
Stack: 
	#000007818 in __klee_posix_wrapped_main() at testing/int_overflow3/segments/segment_2_klee.c:10
	#100006064 in __user_main(1, 140479349915648, 140479349915664) at src/runtime/POSIX/klee_init_env.c:245
	#200000518 in __uClibc_main(140463570944000, 1, 140479349915648, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#300000683 in main(1, 140479349915648)
